--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<ul class="contact">
 										<li>
 											<h3>E-Mail-Adresse</h3>
-											<a href="mailto:info@verstandlxs.eu">info@verstandlxs.eu</a>
+											<a href="mailto:info@verstandlxs.eu">contact@verstandlxs.eu</a>
 										</li>
 										<li>
 											<h3>Social Media</h3>
