--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 												<li><a href="https://twitter.com/byKeksYT" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://github.com/byKeksYT" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://instagram.com/byKeksYT" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a rel="me" href="https://social.verstandlxs.com/@verstandlxs">Mastodon</a></li>
 											</ul>
 										</li>
 									</ul>
