--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 						<div class="inner">
 							<h1>Ben Reimers</h1>
 							<p>Ich bin Inhaber von verschiedenen Projekten im Internet.<br />
-							Im Internet bin ich auch unter dem Nickname "verstandlxs" bekannt.</p>
+							Dort bin ich auch unter dem Nickname "verstandlxs" bekannt.<br />
+							Ich probiere gerne neue Dinge aus, weshalb meine Projekte verschiedene Bereiche betreffen.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Meine Projekte</a></li>
 							</ul>
