--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/Flentex.png" alt="" data-position="center center" /></a>
+							<a href="https://flentex.de" class="image"><img src="images/Flentex.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Flentex</h2>
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/FlentexLogistics.png" alt="" data-position="top center" /></a>
+							<a href="https://logistics.flentex.de" class="image"><img src="images/FlentexLogistics.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Flentex Logistics</h2>
@@ -70,13 +70,13 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/FlentexFM.png" alt="" data-position="25% 25%" /></a>
+							<a href="https://flentexfm.de" class="image"><img src="images/FlentexFM.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>FlentexFM</h2>
 									<p>FlentexFM ist ein Webradio, welches über die Plattform "laut.fm" hörbar ist. Der Fokus der dort gespielten Musik liegt auf den Werken von Newcomern, also Personen, welche neu in der Musikindustrie sind.</p>
 									<ul class="actions">
-										<li><a href="https://radio.flentex.de" class="button">FlentexFM - Homepage</a></li>
+										<li><a href="https://flentexfm.de" class="button">FlentexFM - Homepage</a></li>
 									</ul>
 								</div>
 							</div>
